ridiculous spacing fixed

--- a/src/Custom.scss
+++ b/src/Custom.scss
@@ -1,6 +1,6 @@
 @mixin rotated-text($num-letters: 37, $angle-span: 360deg, $angle-offset: 0deg) {
   $angle-per-char: $angle-span / $num-letters;
-  @for $i from 0 through $num-letters {
+  @for $i from 1 through $num-letters {
     .char#{$i} {
         transform: (rotate($angle-offset + $angle-per-char * $i))
       }
@@ -9,11 +9,17 @@
 
 
 #circle-parent {
-  @include rotated-text
+  @include rotated-text;
+  position: fixed;
+  top: 20%;
+  left: 48%;
+  width: 300px;
+  border-radius: 50%;
+  transform: rotate(0deg);
 }
 
 span {
-  height: 200px;
+  height: 100px;
   position: absolute;
   width: 20px;
   left: 0;
